--- a/package.json
+++ b/package.json
@@ -52,9 +52,9 @@
   "cordovaPlugins": [
     "org.apache.cordova.device",
     "org.apache.cordova.console",
-    "com.ionic.keyboard",
-    "org.apache.cordova.device",
-    "org.apache.cordova.console",
     "com.ionic.keyboard"
+  ],
+  "cordovaPlatforms": [
+    "android"
   ]
 }
