--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,7 @@
   "name": "WhistPointCounter",
   "version": "0.0.0",
   "dependencies": {
+    "angular-translate": "~2.8.0",
     "ionic": "v1.0.0-rc.3",
     "ngCordova": "v0.1.14-alpha"
   },
@@ -13,4 +14,3 @@
     "angular": ">= 1.3.6"
   }
 }
-
