--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,8 @@
   "dependencies": {
     "angular-translate": "~2.8.0",
     "ionic": "v1.0.0-rc.3",
-    "ngCordova": "v0.1.14-alpha"
+    "ngCordova": "v0.1.14-alpha",
+    "underscore": "~1.8.3"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.6",
