--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "angular-translate": "~2.8.0",
     "bootstrap": "~3.3.5",
+    "checklist-model": "~0.5.0",
     "ionic": "v1.0.0-rc.3",
     "ngCordova": "v0.1.14-alpha",
     "underscore": "~1.8.3"
