--- a/bower.json
+++ b/bower.json
@@ -3,10 +3,13 @@
   "version": "0.0.0",
   "dependencies": {
     "angular-chart.js": "~0.8.4",
+    "angular-messages": "~1.4.6",
     "angular-translate": "~2.8.0",
     "bootstrap": "~3.3.5",
+    "bower": "*",
     "Chart.js": "chartjs#~1.0.2",
     "checklist-model": "~0.5.0",
+    "install": "~1.0.4",
     "ionic": "v1.0.0-rc.3",
     "ngCordova": "v0.1.14-alpha",
     "underscore": "~1.8.3"
